se agrega tabla de horarios
se agrega tabla de horarios de atencion en la pagina horario

--- a/horario.html
+++ b/horario.html
@@ -25,6 +25,20 @@
             </ul>
         </nav>
       </header>  
-        <h1>Horarios de Atencion</h1>
+            <table border="1">
+                <tr>
+                    <td colspan="2"><center>Horarios de Atencion</center></td>
+                </tr>
+                <tr>
+                    <td>Lunes a Viernes</td>
+                    <td>Sabados y Feriados</td>   
+                </tr>
+                <tr>
+                    <td>De 09:00Hs a 13:00Hs
+                        <br>
+                    De 17:00Hs a 21:00Hs </td>
+                    <td>De 10:00Hs a 16:00Hs</td>
+                </tr>
+            </table>
             <footer>Pagina creada por WebDesign</footer> 
     </body>
