se agrega formulario de contacto
se agrega formulario de contacto

--- a/contacto.html
+++ b/contacto.html
@@ -5,10 +5,13 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">    
+        <link rel="stylesheet" href="style.css">
+
     </head>
     <body>
-        <header>
+        <header class="header">
             <nav>
+                <h1>A N T U A N</h1>
             <ul>
                 <li>
                     <a href="menu.html">Menu</a>
@@ -24,11 +27,24 @@
                 </li>
             </ul>
         </nav>
-      </header>       
+      </header>  
+      <div class="formulario">
      <h1>Contacto</h1>
-        <p>Envianos tu consulta a traves de nuestra casilla <STRONg>dudasantuan@gmail.com</STRONg> 
+         <form action="" action="">
+            <section class="datos">
+            Nombre <input type="text" name="nombre">
+            <br>    
+            Apellido <input type="text" name="apellido">
             <br>
-            O podes comunicarte telefonicamente o via whatsapp al <strong>3569-458534</strong>
-        </p>
-    <footer>Pagina creada por WebDesign</footer> 
+            Email <input type="text">
+        </section>
+            <br>
+            Dejanos tu comentario <textarea name="" id="" cols="30" rows="10"></textarea>
+            <br>
+            <input type="submit">
+         </form>   
+        </div>
+     
+          
+        <footer class="footer">Pagina creada por WebDesign</footer> 
     </body>
