--- a/horario.html
+++ b/horario.html
@@ -5,10 +5,13 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">    
+
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header>
+        <header class="header">
             <nav>
+                <h1>A N T U A N</h1>
             <ul>
                 <li>
                     <a href="menu.html">Menu</a>
@@ -25,20 +28,24 @@
             </ul>
         </nav>
       </header>  
-            <table border="1">
+        <main>
+            <table border="1" class="tabla">
                 <tr>
-                    <td colspan="2"><center>Horarios de Atencion</center></td>
+                    <td colspan="2">
+                        <h2 class="titulo-tabla">Horarios de Atencion</h2>
+                        </td>
                 </tr>
                 <tr>
-                    <td>Lunes a Viernes</td>
-                    <td>Sabados y Feriados</td>   
+                    <td class="dias">Lunes a Viernes</td>
+                    <td class="dias">Sabados y Feriados </td>   
                 </tr>
                 <tr>
-                    <td>De 09:00Hs a 13:00Hs
+                    <td class="hora">De 09:00Hs a 13:00Hs 
                         <br>
                     De 17:00Hs a 21:00Hs </td>
-                    <td>De 10:00Hs a 16:00Hs</td>
+                    <td class="hora">De 10:00Hs a 16:00Hs</td>
                 </tr>
             </table>
-            <footer>Pagina creada por WebDesign</footer> 
+        </main>    
+            <footer class="footer">Pagina creada por WebDesign</footer> 
     </body>
