--- a/menu.html
+++ b/menu.html
@@ -5,10 +5,12 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">    
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header>
+        <header class="header">
             <nav>
+                <h1>A N T U A N</h1>
             <ul>
                 <li>
                     <a href="menu.html">Menu</a>
@@ -26,5 +28,5 @@
         </nav>
       </header>  
       <h1>Menu</h1>
-         <footer>Pagina creada por WebDesign</footer> 
+      <footer class="footer">Pagina creada por WebDesign</footer>  
 </body>
