--- a/contacto.html
+++ b/contacto.html
@@ -20,30 +20,36 @@
                     <a href="horario.html">Horarios</a>
                 </li>
                 <li>
-                    <a href="contacto.html">Contacto</a>
+                    <a href="contacto.html" target="_blank">Contacto</a>
                 </li>
                 <li>
-                    <a href="#" target="_blank">Visita tambien Manuela Store</a>
+                    <a href="index.html">Home</a>
                 </li>
             </ul>
         </nav>
       </header>  
-      <div class="formulario">
+            <main class="formulario">
      <h1>Contacto</h1>
-         <form action="" action="">
-            <section class="datos">
-            Nombre <input type="text" name="nombre">
+         <form method="" action="">
+           <label for="nombre">Nombre</label>
+                <br>
+            <input type="text" id="nombre">
             <br>    
-            Apellido <input type="text" name="apellido">
+            <label for="apellido">Apellido</label>
             <br>
-            Email <input type="text">
-        </section>
+            <input type="text" id="apellido">
             <br>
-            Dejanos tu comentario <textarea name="" id="" cols="30" rows="10"></textarea>
+            <label for="email">Email</label>
             <br>
-            <input type="submit">
+            <input type="text" id="email">
+            <br>
+            <label for="com">Dejanos tu comentario</label>
+            <br>
+            <textarea name="" id="com" cols="30" rows="10"></textarea>
+            <br>
+            <input type="submit" value="Enviar">
          </form>   
-        </div>
+            </main>
      
           
         <footer class="footer">Pagina creada por WebDesign</footer> 
