--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                     <a href="horario.html">Horarios</a>
                 </li>
                 <li>
-                    <a href="contacto.html">Contacto</a>
+                    <a href="contacto.html" target="_blank">Contacto</a>
                 </li>
                 <li>
-                    <a href="#" target="_blank">Visita tambien Manuela Store</a>
+                    <a href="index.html">Home</a>
                 </li>
             </ul>
         </nav>
@@ -45,6 +45,6 @@
               Efectivo - Tarjetas de credito (Hasta 6 cuotas sin interes) - Cuenta DNI - Mercado Pago
             </section>
     </main>    
-    <footer class="footer">Pagina creada por WebDesign</footer> ter>    
+    <footer class="footer">Pagina creada por WebDesign</footer>    
     </body>
 </html>
