--- a/horario.html
+++ b/horario.html
@@ -20,19 +20,19 @@
                     <a href="horario.html">Horarios</a>
                 </li>
                 <li>
-                    <a href="contacto.html">Contacto</a>
+                    <a href="contacto.html" target="_blank">Contacto</a>
                 </li>
                 <li>
-                    <a href="#" target="_blank">Visita tambien Manuela Store</a>
+                    <a href="index.html">Home</a>
                 </li>
             </ul>
         </nav>
       </header>  
         <main>
             <table border="1" class="tabla">
-                <tr>
+                <tr class="titulo-tabla">
                     <td colspan="2">
-                        <h2 class="titulo-tabla">Horarios de Atencion</h2>
+                       <h3> Horarios de Atencion</h3>
                         </td>
                 </tr>
                 <tr>
