--- a/menu.html
+++ b/menu.html
@@ -19,10 +19,10 @@
                     <a href="horario.html">Horarios</a>
                 </li>
                 <li>
-                    <a href="contacto.html">Contacto</a>
+                    <a href="contacto.html" target="_blank">Contacto</a>
                 </li>
                 <li>
-                    <a href="#" target="_blank">Visita tambien Manuela Store</a>
+                    <a href="index.html">Home</a>
                 </li>
             </ul>
         </nav>
